validate posts